test/files/neg/t4987.scala
class Foo2 private (a: Int, b: Int)
object Bar2 { new Foo2(0, 0) }
